--- a/sidepanel.html
+++ b/sidepanel.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Font Detector</title>
-        <link rel="stylesheet" href="sidepanel.css" />
+        <link rel="stylesheet" href="styles/sidepanel.css" />
+        <link rel="stylesheet" href="styles/global.css" />
     </head>
     <body>
         <div class="container">
